--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.5.2",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "typescript": "4.9.3"
